# TRID3NT

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  public_data_source_catalog.yaml
agents/: AGENTS.md  agent.md  engine.md  infra.md  orchestrator.md  schema.md  testing.md  web.md  (+1 more)
services/agent/: Dockerfile  README.md  launch_mexico_beach_surge.py  pyproject.toml  verify_mexico_beach_surge.py  verify_mexico_beach_waves.py
services/agent/scripts/: ws_animation_recorder.py
services/agent/src/grace2_agent/: adapter.py  auth_handshake.py  bedrock_adapter.py  case_lifecycle.py  categories.py  circuit_breaker.py  credential_registry.py  dynamo_backend.py  gemini_cache.py  layer_uri_emit.py  lessons.py  main.py  mcp.py  mode2_classifier.py  openai_adapter.py  persistence.py  pipeline_emitter.py  runaway_guard.py  sandbox_hardening.py  sandbox_runner.py  scenario_reuse.py  secrets_handler.py  server.py  spatial_input.py  telemetry.py  tool_arg_normalizer.py  tool_catalog_http.py  uri_registry.py
services/agent/src/grace2_agent/data/: tool_query_corpus.yaml
services/agent/src/grace2_agent/tools/: README.md  __init__.py  _satellite_slider.py  aggregate_claims_across_sources.py  analytical_qa.py  analyze_affected_fields.py  cache.py  catalog.py  chart_tools.py  clip_raster_to_bbox.py  clip_raster_to_polygon.py  clip_vector_to_polygon.py  code_exec_tool.py  compute_aspect.py  compute_blended_composite.py  compute_building_density.py  compute_canopy_height.py  compute_change_detection.py  compute_colored_relief.py  compute_contours.py  compute_cross_section.py  compute_flood_depth_damage.py  compute_hillshade.py  compute_home_range_kde.py  compute_idf_curve.py  compute_impervious_surface.py  compute_layer_bounds.py  compute_movement_trajectory.py  compute_ndvi.py  compute_overtopping.py  compute_slope.py  compute_terrain_profile.py  compute_urban_heat_island.py  compute_wave_nomograph.py  compute_zonal_statistics.py  cut_features_with_polygon.py  data_fetch.py  digitize_water_body.py  discover_dataset.py  enhance_satellite_image.py  (+110 more)
services/agent/src/grace2_agent/workflows/: __init__.py  compute_impact_envelope.py  mesh_layer.py  model_asr_scenario.py  model_capture_zone_scenario.py  model_conservation_priority.py  model_contamination_affected_fields.py  model_dambreak_geoclaw_scenario.py  model_fire_spread_scenario.py  model_flood_habitat_scenario.py  model_flood_scenario.py  model_glm_lightning_animation.py  model_goes_fire_animation.py  model_groundwater_contamination_scenario.py  model_landslide_scenario.py  model_mar_scenario.py  model_mine_dewatering_scenario.py  model_multi_species_scenario.py  model_news_event_ingest.py  model_nws_flood_event_scenario.py  model_regional_water_budget_scenario.py  model_river_dye_release_scenario.py  model_river_seepage_scenario.py  model_saltwater_intrusion_scenario.py  model_satellite_fire_animation.py  model_seismic_hazard_scenario.py  model_sustainable_yield_scenario.py  model_urban_flood_swmm.py  model_wave_scenario.py  model_wetland_hydroperiod_scenario.py  pelicun_damage_with_buildings.py  physics_registry.py  postprocess_flood.py  postprocess_geoclaw.py  postprocess_landlab.py  postprocess_modflow.py  postprocess_openquake.py  postprocess_swan.py  postprocess_swmm.py  run_geoclaw.py  (+8 more)
services/agent/tests/: conftest.py  test_aggregate_claims_across_sources.py  test_always_offload_heavy_tools.py  test_auth_required_gate.py  test_auto_create_case_job0262.py  test_autostop_liveness.py  test_building_detail_http_route.py  test_case_binding_job0268.py  test_case_context_reset.py  test_case_history_rehydrate_f17.py  test_case_layer_write_path_job0259.py  test_case_view_snapshot.py  test_catalog_tools.py  test_categories.py  test_chart_tools.py  test_circuit_breaker.py  test_circuit_breaker_integration.py  test_clip_raster_to_bbox.py  test_clip_raster_to_polygon.py  test_clip_vector_to_polygon.py  test_coastal_surge_autowire.py  test_code_exec_tool.py  test_compute_aspect.py  test_compute_blended_composite.py  test_compute_building_density.py  test_compute_colored_relief.py  test_compute_contours.py  test_compute_cross_section.py  test_compute_hillshade.py  test_compute_impact_envelope.py  test_compute_impervious_surface.py  test_compute_layer_bounds.py  test_compute_ndvi.py  test_compute_slope.py  test_compute_zonal_statistics.py  test_credential_pipeline.py  test_data_fetch.py  test_duplicate_flood_layer_fix.py  test_dynamo_persistence.py  test_envelope_case_tagging_job0277.py  (+134 more)
services/agent/tests/workflows/: test_model_news_event_ingest.py
tests/: README.md  _agent_runner.py  conftest.py  pyproject.toml
tests/integration/: test_contracts_suite.py  test_make_targets.py  test_mcp_smoke.py
tests/m2/: conftest.py  test_iac_clean.py  test_pyqgis_worker_roundtrip.py  test_qgis_server_wms.py
tests/m2/artifacts/: .gitignore  execute-stdout-49c6c439.json  getcapabilities.xml  mutated-49c6c439.qgs  worker-notify-49c6c439.json
tests/m3/: README.md  __init__.py  conftest.py  test_wms_tile_latency.py
tests/m3/fixtures/: pipeline_state_cancelled.json  pipeline_state_complete.json  pipeline_state_failed.json  pipeline_state_pending.json  pipeline_state_running.json  session_state_seeded.json  session_state_with_current_pipeline.json
tests/m3/playwright/: __init__.py  test_camera_lock.py  test_layer_panel.py  test_no_gs_uri.py  test_pipeline_strip.py  test_screenshot_smoke.py  test_wms_tiles.py
tests/m4/: __init__.py  conftest.py  test_fort_myers_demo.py
tests/m4/fixtures/: expected_fort_myers.json
tests/m5/: __init__.py  conftest.py  test_fort_myers_hurricane_ian_demo.py  test_model_flood_habitat_scenario.py
tests/m5/fixtures/: hurricane_ian_fort_myers.json
tests/m6/: __init__.py  conftest.py  test_case2_event_ingest.py
tests/m6/fixtures/: pipeline_state_mid_run.json  session_state_flood_layer.json
tests/m6/playwright/: __init__.py  test_sprint09_acceptance.py
tests/protocol/: _ws_helpers.py  test_latency.py  test_negative_controls.py  test_protocol_conformance.py  test_research_mode.py
(+1541 files in other folders)
