[project]
name = "grace2-tests"
version = "0.1.0"
description = "GRACE-2 M1 acceptance + protocol conformance + integration tests (job-0017)"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "websockets>=13",
  "pymongo>=4.7",
  "grace2-contracts",
  "grace2-agent",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "live_gemini: real Gemini API call (skipped by default; opt-in via -m live_gemini)",
  "live_atlas: real Atlas MCP/Mongo call (skipped automatically if Atlas unreachable)",
  "live_web: requires a local Vite dev server (M3 — job-0028)",
  "live_qgis_wms_browser: requires deployed Cloud Run QGIS Server WMS reachable from a headless browser (M3 — job-0028)",
  "live_m4: requires the live M4 substrate — agent service subprocess + GCS cache bucket + Nominatim (M4 — job-0036). Opt-in via `make test-m4` or `-m live_m4`.",
  "live_m5: requires the live M5 substrate — agent service subprocess + GCS cache + Cloud Workflows orchestrator + SFINCS dispatch + Nominatim/3DEP/NHDPlus HR/Atlas 14/MRLC WCS (M5 — job-0043). Opt-in via `make test-m5` or `-m live_m5`.",
  "live_qgis_process: requires a local `qgis_process` binary (Mac-local grace2 conda env per PROJECT_STATE.md). Auto-qualifies on dev hosts without it.",
]
testpaths = ["protocol", "integration"]
filterwarnings = [
  "ignore::DeprecationWarning",
]
