[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grace2-agent"
version = "0.1.0"
description = "GRACE-2 agent service: ADK + Gemini on Cloud Run, Appendix-A WebSocket server, MongoDB MCP integration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GRACE-2 agent specialist" }]

# Pin upper bounds loosely; ADK + genai SDK evolve fast — verify with `pip show`.
dependencies = [
    "google-adk>=2.2,<3",
    "google-genai>=2.8,<3",
    "google-cloud-secret-manager>=2.20,<3",
    "websockets>=13,<16",
    "pymongo>=4.8,<5",
    "pydantic>=2,<3",
    "python-ulid>=2,<4",
    # Consumed verbatim from packages/contracts/ (editable install via make run-agent).
    "grace2-contracts>=0.1,<0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
grace2-agent = "grace2_agent.main:run"

[tool.setuptools.packages.find]
where = ["src"]
