[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grace2-agent"
version = "0.1.0"
description = "GRACE-2 agent service: ADK + Gemini on Cloud Run, Appendix-A WebSocket server, MongoDB MCP integration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GRACE-2 agent specialist" }]

# Pin upper bounds loosely; ADK + genai SDK evolve fast — verify with `pip show`.
dependencies = [
    "google-adk>=2.2,<3",
    "google-genai>=2.8,<3",
    "google-cloud-secret-manager>=2.20,<3",
    # job-0032 M4 substrate: cache shim writes to gs://grace-2-hazard-prod-cache/
    # provisioned by job-0031; reaches it via ADC in deployed contexts.
    "google-cloud-storage>=2.18,<3",
    # job-0033 M4 Stage C: data-fetch atomic tools.
    # py3dep wraps the USGS 3DEP DEM service (CONUS DEM at 10/30m); pulls in
    # rioxarray + rasterio for COG serialization. requests is the HTTP client
    # for Nominatim / Census ACS / Planetary Computer STAC search.
    "py3dep>=0.19,<0.20",
    "rioxarray>=0.18,<1",
    "requests>=2.32,<3",
    # job-0037 sprint-07 Stage A: WorldPop default flip for fetch_population.
    # pystac-client is the canonical STAC catalog reader used by future
    # fetch_landcover (NLCD / WorldCover) too. WorldPop itself is served via
    # a direct REST API (https://www.worldpop.org/rest/data/pop/...) rather
    # than a STAC catalog (the kickoff-recommended PC ``worldpop-100m``
    # collection does not exist on Planetary Computer at this writing — see
    # OQ-37-WORLDPOP-STAC-ENDPOINT). We still pin pystac-client now so the
    # dep set is stable for sprint-07's downstream fetcher jobs (job-0039).
    "pystac-client>=0.8,<1",
    "websockets>=13,<16",
    "pymongo>=4.8,<5",
    "pydantic>=2,<3",
    "python-ulid>=2,<4",
    # Consumed verbatim from packages/contracts/ (editable install via make run-agent).
    "grace2-contracts>=0.1,<0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
grace2-agent = "grace2_agent.main:run"

[tool.setuptools.packages.find]
where = ["src"]
