[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grace2-agent"
version = "0.1.0"
description = "GRACE-2 agent service: ADK + Gemini on Cloud Run, Appendix-A WebSocket server, MongoDB MCP integration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GRACE-2 agent specialist" }]

# Pin upper bounds loosely; ADK + genai SDK evolve fast — verify with `pip show`.
dependencies = [
    "google-adk>=2.2,<3",
    "google-genai>=2.8,<3",
    "google-cloud-secret-manager>=2.20,<3",
    # job-0032 M4 substrate: cache shim writes to gs://grace-2-hazard-prod-cache/
    # provisioned by job-0031; reaches it via ADC in deployed contexts.
    "google-cloud-storage>=2.18,<3",
    # job-0041 M5 Stage C: solver dispatch (run_solver + wait_for_completion)
    # drives Cloud Workflows executions of the SFINCS substrate (job-0040)
    # and cancels them via workflows.executions.cancel for the Invariant-8
    # cancel chain (≤30 s per NFR-R-3).
    "google-cloud-workflows>=1.16,<2",
    # job-0033 M4 Stage C: data-fetch atomic tools.
    # py3dep wraps the USGS 3DEP DEM service (CONUS DEM at 10/30m); pulls in
    # rioxarray + rasterio for COG serialization. requests is the HTTP client
    # for Nominatim / Census ACS / Planetary Computer STAC search.
    "py3dep>=0.19,<0.20",
    "rioxarray>=0.18,<1",
    "requests>=2.32,<3",
    # job-0037 sprint-07 Stage A: WorldPop default flip for fetch_population.
    # pystac-client is the canonical STAC catalog reader used by future
    # fetch_landcover (NLCD / WorldCover) too. WorldPop itself is served via
    # a direct REST API (https://www.worldpop.org/rest/data/pop/...) rather
    # than a STAC catalog (the kickoff-recommended PC ``worldpop-100m``
    # collection does not exist on Planetary Computer at this writing — see
    # OQ-37-WORLDPOP-STAC-ENDPOINT). We still pin pystac-client now so the
    # dep set is stable for sprint-07's downstream fetcher jobs (job-0039).
    "pystac-client>=0.8,<1",
    # job-0042 M5 capstone + job-0049 install: HydroMT-SFINCS drives
    # build_sfincs_model per the OQ-4 §4 decision (full HydroMT reliance).
    # The < 2.0 cap on hydromt-sfincs holds until SfincsModel v2.0 RC exits
    # release-candidate status — v2.0 breaks the component-based API.
    # Honest correction (job-0049): hydromt-sfincs 1.1.2 does not exist on
    # PyPI (line jumps 1.1.0 → 1.2.0), and the stable hydromt-sfincs v1.2.x
    # line transitively constrains hydromt < 1 (it does NOT support
    # hydromt >= 1.0 yet — that lands with hydromt-sfincs v2.0 RC). The
    # OQ-4 §4 paper pin "hydromt-sfincs >= 1.1.2, < 2.0" + "hydromt >= 1.0"
    # is internally contradictory in the upstream releases; the working
    # combo is hydromt-sfincs >= 1.1.0, < 2.0 with hydromt resolved
    # transitively (currently 0.10.1). Documented in
    # infra/THIRD_PARTY_LICENSES.md OQ-49 note. fsspec[gcs] is the GCS
    # bridging layer HydroMT uses to materialize the staged deck.
    "hydromt-sfincs>=1.1.0,<2.0",
    # job-0056 pandas pin — resolves two upstream hydromt-sfincs 1.2.2 pandas-3 incompats:
    #   OQ-54 (sfincs.py:1858): pd.Index.is_integer() — removed in pandas 2.0, still
    #         present (deprecated) in pandas 2.x. Repro: pd.RangeIndex(1,5).is_integer()
    #         → AttributeError on pandas 3.x.
    #   OQ-55 (sfincs.py:2456): pd.date_range(..., freq="10T") — "T" minute alias
    #         deprecated in pandas 2.2, removed in pandas 3.0.
    # pandas 2.2.x is the earliest series with pre-built wheels for Python 3.13
    # (pandas 2.1.x and older have no cp313 wheel and fail to compile against the
    # CPython 3.13 changed _PyLong_AsByteArray API). Both deprecated APIs remain
    # functional under pandas 2.2.x with FutureWarnings — acceptable for v0.1 scope.
    # Migration path: when hydromt-sfincs upstream lands a pandas-3 fix (likely
    # v1.2.3 or v2.0 RC — upstream should replace is_integer() with
    # pd.api.types.is_integer_dtype() and "10T" with "10min"), drop this pin and
    # bump hydromt-sfincs to the fixed release.
    "pandas>=2.2,<2.3",
    "fsspec[gcs]>=2024.6",
    # job-0092 web_fetch: BeautifulSoup4 + lxml drive the main_text/metadata
    # extraction modes (boilerplate strip + Open Graph tag parse). lxml was
    # already present transitively (rasterio chain); pin it explicitly here
    # so a future dep churn doesn't silently drop the parser.
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<7",
    "websockets>=13,<16",
    "pymongo>=4.8,<5",
    "pydantic>=2,<3",
    "python-ulid>=2,<4",
    # job-0122 Wave 2: Firebase Auth admin SDK for the WS connect handshake.
    # The agent verifies the client's Firebase ID token via
    # ``firebase_admin.auth.verify_id_token`` (Appendix H.5), resolves the
    # Firebase ``uid`` to a ``UserDocument._id`` via Persistence (job-0115),
    # and auto-provisions on first connect. Anonymous fallback when no token
    # arrives within 5s (H.3). Per Decision E + H.1 v0.1 uses GCP Application
    # Default Credentials — no separate service-account JSON.
    "firebase-admin>=6.5,<8",
    # job-0120 Wave 2: Pelicun (NHERI SimCenter) is the fragility-curve runtime
    # for ``run_pelicun_damage_assessment`` (post-M5 Decision N). v0.1 wires
    # only the bundled HAZUS v6.1 flood loss-function library
    # (resources/DamageAndLossModelLibrary/flood/...); the seismic library
    # is bundled but its engine integration is sprint-13+ (OQ-8-RESOLVED-V0.1).
    # Pulls in scikit-learn / scipy / pandas / colorama transitively; pandas
    # is already pinned to 2.2.x by job-0056 (HydroMT-SFINCS compat) which is
    # within pelicun's pandas>=2.2,<3 range.
    "pelicun>=3.9,<4",
    # job-0131 Wave 2: Copernicus CDS API client for fetch_era5_reanalysis.
    # cdsapi wraps the queue/poll/stream lifecycle of CDS retrievals; we
    # call ``Client.retrieve()`` from the engine atomic tool and convert
    # the returned NetCDF into a CRS-tagged COG. Tier-2 Copernicus CDS
    # secret resolution flows through the Wave 2 sibling job-0124
    # ``Persistence.get_secret_value`` path.
    "cdsapi>=0.7,<1",
    # Consumed verbatim from packages/contracts/ (editable install via make run-agent).
    "grace2-contracts>=0.1,<0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
grace2-agent = "grace2_agent.main:run"

[tool.setuptools.packages.find]
where = ["src"]
